Tagit bort hidden overflow samt fixar produktplaceringen så att den passar bättre

--- a/Css/Products.css
+++ b/Css/Products.css
@@ -12,7 +12,6 @@ body {
     height: 75em;
     width: 100%;
     min-height: 75em;
-    overflow: hidden;
 }
 
 nav {
@@ -159,20 +158,21 @@ Here the products css starts!
 
  */
  .container {
- 	min-width: 1650px; /* Setting max width to fix resizing */
+ 	min-width: 100%; /* Setting max width to fix resizing */
+    position: absolute;
  }
 .product {
 	position: relative;
     height: 21em;
     width: 17em;
 	background-color: white;
-	margin: 10em auto auto 17em;
+	margin: 10em auto auto 7em;
 	box-shadow: 0px 2px 2px rgba(0,0,0,0.51);
 	display: inline-block;
 	max-width: 17em;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-       text-shadow: 0px 1px 1px #4d4d4d;
+    text-shadow: 0px 1px 1px #4d4d4d;
 }
 .image {
 	width: 100%;
