--- a/Css/Stylesheet.css
+++ b/Css/Stylesheet.css
@@ -12,7 +12,6 @@ body {
     height: 75em;
     width: 100%;
     min-height: 75em;
-    overflow: hidden;
 }
 
 nav {
